@@ -1,3 +1,8 @@
 $(document).ready(function() {
-    $("#content").screentimeAnalytics();
+    var content = $("#content");
+    if (content.length > 0) {
+        if (typeof content.screentimeAnalytics === 'function') {
+            content.screentimeAnalytics();
+        }
+    }
 });
