@@ -3,6 +3,8 @@ Changelog
 
 1.2 - (unreleased)
 ------------------
+* Bug fix: Check for content and screentimeAnalytics before activation
+  [olimpiurob #96812]
 * Task: Added matomo code for bise
   [iulianpetchesi #99202]
 * Bug fix: avoid double search icon on IOS devices
